# naukri-crm-hcp

./: .env.example  README.md  package-lock.json
backend/: .env  .env.example  alembic.ini  pyproject.toml  requirements.txt  setup.py
backend/app/: __init__.py  config.py  main.py
backend/app/ai/: __init__.py  config.py  langgraph_agent.py  state.py
backend/app/ai/clients/: __init__.py  groq_client.py
backend/app/ai/prompts/: entity_extraction.py  intent_classification.py  response_generation.py  summarization.py
backend/app/api/middleware/: __init__.py  cors.py  error_handler.py  logging.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  ai.py  analytics.py  auth.py  followups.py  hcps.py  interactions.py
backend/app/core/: constants.py  exceptions.py  security.py
backend/app/models/: __init__.py  audit_log.py  base.py  database.py  followup.py  hcp.py  interaction.py  user.py
backend/app/repositories/: __init__.py  audit_repository.py  base_repository.py  followup_repository.py  hcp_repository.py  interaction_repository.py  user_repository.py
backend/app/schemas/: __init__.py  ai.py  auth.py  followup.py  hcp.py  interaction.py
backend/app/services/: __init__.py  ai_service.py  analytics_service.py  auth_service.py  followup_service.py  hcp_service.py  interaction_service.py
backend/app/utils/: logger.py
backend/scripts/: setup_db.py  setup_env.sh
backend/tests/: conftest.py  test_ai_agent.py  test_analytics.py  test_auth.py  test_hcps.py  test_interactions.py
frontend/: .env  .env.example  .gitignore  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx  config.js  index.css  main.jsx
frontend/src/api/: axios.js  endpoints.js  index.js  interceptors.js
frontend/src/hooks/: index.js  useAuth.js  useDebounce.js  useForm.js
(+82 files in other folders)
